dataset1235/2025-2/2318198438/users/473799190/executions/2601575092_3940197836.log
== SUBMISSION (2025-09-01 22:50:03)
-- CODE: 
aresta = 5
area = ((3)*((3)**0.5))/2)*(aresta**2)

print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = ((3)*((3)**0.5))/2)*(aresta**2)
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = ((3)*((3)**0.5))/2)*(aresta**2)
                             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:50:53)
-- CODE: 
aresta = 5
area = ((3*((3)**0.5))/2)*(aresta**2)

print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:50:22)
-- CODE: 
aresta = 5
area = ((3*((3)**0.5))/2)*(aresta**2)

print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
